@@ -1,3 +1,7 @@
+========================
+collective.monkeypatcher
+========================
+
 Introduction
 ============
 
@@ -10,6 +14,9 @@ fully initialised and configured. This is similar to using the `initialize()`
 method in a product's __init__.py, except it does not require that the package
 be a full-blown Zope 2 product with a persistent Control_Panel entry.
 
+Applying a monkey patch
+=======================
+
 Here's an example::
 
     <configure
@@ -20,6 +27,7 @@ Here's an example::
         <include package="collective.monkeypatcher" file="meta.zcml" />
     
         <monkey:patch
+            description="This works around issue http://some.tracker.tld/ticket/123"
             class="Products.CMFPlone.CatalogTool.CatalogTool"
             original="searchResults"
             replacement=".catalog.patchedSearchResults"
@@ -29,20 +37,26 @@ Here's an example::
 
 In this example, we patch Plone's CatalogTool's searchResults() function,
 replacing it with our own version in catalog.py. To patch a module level
-function, you can use 'module' instead of 'class'. The original class and
+function, you can use `module` instead of `class`. The original class and
 function/method name and the replacement symbol will be checked to ensure
 that they actually exist.
 
-If patching happens too soon (or too late), use the 'order' attribute to
+If patching happens too soon (or too late), use the `order` attribute to
 specify a higher (later) or lower (earlier) number. The default is 1000.
 
+By default, `DocDinderTab <http://pypi.python.org/pypi/Products.DocFinderTab>`_
+and other TTW API browsers will emphasize the monkey patched methods/functions,
+appending the docstring with "Monkey patched with 'my.monkeypatche.function'".
+If you don't want this, you could set the `docstringWarning` attribute to
+`false`.
+
+
 If you want to do more than just replace one function with another, you can
-provide your own patcher function via the 'handler' attribute. This should
+provide your own patcher function via the `handler` attribute. This should
 be a callable like::
 
   def apply_patch(scope, original, replacement):
       ...
 
-Here, 'scope' is the class/module that was specified. 'original' is the string
-name of the function to replace, and 'replacement' is the replacement
-function.
+Here, `scope` is the class/module that was specified. `original` is the string
+name of the function to replace, and `replacement` is the replacement function.
